--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -10,10 +10,12 @@ a
     background-color: $whity
 .header
     padding-block: 40px
+    position: relative
     &_menu
         display: flex
         justify-content: center
         align-items: center
+        cursor: pointer
         &_hamburger
             display: block
             width: 24px
@@ -39,7 +41,7 @@ a
                 letter-spacing: 0.13em
                 &:hover
                     transition: 0.2s all
-                    color: $pink_dark
+                    
     &_nav
         margin-block: auto
         &_ul
@@ -84,6 +86,39 @@ a
             color: $brown
             margin-right: 10px
 main
+    position: relative
+    .slide_menu
+        display: block
+        position: absolute
+        z-index: 4
+        width: 100%
+        height: 1px
+        background: #FFFAFA
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1), inset 0px 4px 4px rgba(0, 0, 0, 0.15)
+        transition: 0.6s all
+        &_item
+            padding-inline: 60px
+            padding-block: 40px
+            display: flex
+            opacity: 0%
+            transition: 0.6s all
+            text-align: center
+            color: $brown
+            h1
+                font-size: 20px
+                font-weight: 600
+            a
+                display: block
+                text-decoration: underline 1px
+                font-size: 16px
+                margin-bottom: 5px
+
+    .slide_menu_active
+        height: 300px
+    .slide_menu_item_active
+        opacity: 100%
+            
+        
     .greetings
         position: relative
         .left_content
