--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -2,6 +2,6 @@ $black_color: #000000
 $white_color: #ffffff
 $pink: #FCE1E9
 $pink_dark: #ea9a90
-$whity: #fff8f6
+$whity: #FFFBF9
 $brown: #413333
 $blue: #D6F4F4
