--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -171,6 +171,8 @@
                     width: 444px
                     height: auto
 @media (min-width: 576px) and (max-width: 767.98px)
+    .center_white_box
+        box-shadow: 0px 4px 15px 5px rgba(0, 0, 0, 0.25)
     header
         .phone_xs_sm
             display: flex
@@ -208,14 +210,16 @@
                     justify-content: center
                     &_divider
                         margin-right: 0
-                        width: 116px
+                        //width: 116px
+                        width: 20%
                         &_xs_sm
                             display: flex
                     &_name
                         margin-inline: 17px
                 &_logo
                     display: block
-                    width: 75% 
+                    //width: 75%
+                    width: 80% 
                     margin-inline: auto
                 &_text
                     text-align: center
@@ -247,7 +251,9 @@
                     display: none
             .branch
                 display: none
-@media (min-width: 320px) and (max-width: 575.98px)
+@media (min-width: 414px) and (max-width: 575.98px)
+    .center_white_box
+        box-shadow: 0px 4px 17px 5px rgba(0, 0, 0, 0.25)
     body
         padding-inline: 16px
     header
@@ -287,52 +293,55 @@
                     justify-content: center
                     &_divider
                         margin-right: 0
-                        width: 20%
+                        width: 15%
                         &_xs_sm
                             display: flex
                     &_name
-                        font-size: 19px
+                        font-size: 22px
                         margin-inline: 17px
+                        text-align: center
                 &_logo
                     display: block
-                    width: 80% 
+                    width: 85% 
                     margin-inline: auto
+                    margin-top: 25px
                 &_text
                     text-align: center
-                    font-size: 15px
+                    font-size: 23px
                 &_subtext
-                    
                     ul
                         padding: 0
                         display: flex
                         flex-direction: column
-                        //justify-content: center
                         li
-                            font-size: 15px
+                            font-size: 22px
                             margin-inline: auto
-                            //&:nth-child(1)
-                                //width: 190px
-                            //&:nth-child(2)
-                                //width: 327px
                             &:before
-                                top: 12px
+                                top: 16px
+                                left: -22px
+                                width: 15px
                             &:after
                                 content: ''
                                 display: block
                                 position: absolute
-                                right: -30px
-                                top: 12px
-                                width: 20px
+                                right: -22px
+                                top: 16px
+                                width: 15px
                                 height: 0.7px
                                 background-color: $brown
                 .btn
-                    width: 265px
-                    height: 50px
-                    font-size: 16px
+                    width: 320px
+                    height: 60px
+                    font-size: 20px
+                    margin-top: 160px
                     margin-bottom: 77px
             .right
                 &_woman, &_pinkbox, &_bluebox
                     display: none
             .branch
-                display: none
+                
+                img
+                    width: 102%
+                    bottom: 140px
+                    
 
