414px_resp_test

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -254,9 +254,12 @@
 @media (min-width: 414px) and (max-width: 575.98px)
     .center_white_box
         box-shadow: 0px 4px 17px 5px rgba(0, 0, 0, 0.25)
+        margin-top: 6px
+        padding: 10px
     body
-        padding-inline: 16px
+        padding-inline: 6px
     header
+        padding-block: 25px
         .phone_xs_sm
             display: flex
             i
@@ -307,7 +310,7 @@
                     margin-top: 25px
                 &_text
                     text-align: center
-                    font-size: 23px
+                    font-size: 22px
                 &_subtext
                     ul
                         padding: 0
@@ -330,7 +333,7 @@
                                 height: 0.7px
                                 background-color: $brown
                 .btn
-                    width: 320px
+                    width: 90%
                     height: 60px
                     font-size: 20px
                     margin-top: 160px
