--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -253,7 +253,7 @@
                 display: none
 @media (min-width: 414px) and (max-width: 575.98px)
     .center_white_box
-        box-sizing: none
+        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.5)
         margin-top: 6px
         padding: 10px
     body
