--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -255,7 +255,7 @@
     .center_white_box
         box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.5)
         margin-top: 6px
-        padding: 10px
+        //padding: 10px
     body
         padding-inline: 6px
     header
@@ -304,12 +304,12 @@
                         margin-inline: 17px
                         text-align: center
                 &_logo
-                    display: block
-                    width: 85% 
                     margin-inline: auto
                     margin-top: 18px
+                    display: block
+                    width: 85% 
                 &_text
-                    margin-top: 18px
+                    margin-top: 20px
                     text-align: center
                     font-size: 22px
                 &_subtext
@@ -335,11 +335,12 @@
                                 height: 0.7px
                                 background-color: $brown
                 .btn
+                    margin-top: 44px
+                    margin-bottom: 77px
                     width: 90%
                     height: 60px
                     font-size: 20px
-                    margin-top: 44px
-                    margin-bottom: 77px
+                    
             .right
                 &_woman, &_pinkbox, &_bluebox
                     display: none
